hphp/test/zend/good/ext/standard/tests/general_functions/sleep_basic.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
}
